Oomat: add semantic tags

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <header>
 
+  </header>
+
+  <main>
+
+  </main>
+
+  <footer>
+
+  </footer>
+  
 
 
   <script src="js/script.js"></script>
