Krafter34: add the header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
 </head>
 <body>
   <header>
+    <div class="container">
+      <div class="navbar">
+        <h2>Logo</h2>
 
+        <button>Sign out</button>
+      </div>
+    </div>
   </header>
 
   <main>
